add keyboard and cube

--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
     <section id="projects">
       <h2 id="tagline">Красивый заголовок*</h2>
       <h3 class="our_text">Наши проекты</h3>
+      <a href="./keyboard">
+        <div id="keyboard_img" class="app_icon circle_photo circle_middle">
+          <h4 class="name photo_text">Keyboard</h4>
+        </div>
+      </a>
+      <div class="hr"></div>
+      <a href="./cube">
+        <div id="cube_img" class="app_icon circle_photo circle_middle">
+          <h4 class="name photo_text">Cube</h4>
+        </div>
+      </a>
+      <div class="hr hr_alternate"></div>
       <a href="./smartbook">
         <div id="smartbook_img" class="app_icon circle_photo circle_middle">
           <h4 class="name photo_text">Smartbook</h4>
@@ -117,7 +129,7 @@
       <h3 class="our_text">Наши контакты*</h3>
       <a href="tel:+79627428848">
         <div id="phone" class="contacts_icon circle_photo circle_photo_contacts">
-          <h4 class="name photo_text_contacts">8 (962) 742-88-48</h4>
+          <h4 class="name_increased photo_text_contacts">8 (962) 742-88-48</h4>
         </div>
       </a>
       <div class="hr"></div>
