--- a/cube/index.html
+++ b/cube/index.html
@@ -77,12 +77,15 @@
         <div id="screenshot_1" class="screenshot"></div>
         <div id="screenshot_2" class="screenshot"></div>
       </div>
+      <a href="https://github.com/ele-group/cube/raw/master/Cube%20Game.exe"><button class="gradient_btn download_btn">
+        <div class="sub_btn"></div>
+        <div class="text_btn">Скачать</div>
+      </button></a>
       <p id="center_text" class="description">
         Thank you very much!
       </p>
       <br>
       <div class="supported_cube">
-
       </div>
       <br>
     </section>
