--- a/mobile/keyboard/index.html
+++ b/mobile/keyboard/index.html
@@ -22,6 +22,14 @@
       <nav>
         <ul>
           <li>
+            <a href="#main"><button class="gradient_btn" id="btn_menu_main">
+                <div class="sub_btn"></div>
+                <div class="text_btn">Главная</div>
+              </button></a>
+          </li>
+        </ul>
+        <ul>
+          <li>
             <a href="../#projects"><button class="gradient_btn" id="btn_menu_projects">
                 <div class="sub_btn"></div>
                 <div class="text_btn">Проекты</div>
@@ -67,6 +75,10 @@
   </footer>
   <script>
     btn_mobile.addEventListener("click", function () {
+      menu_mobile.classList.toggle("menu_is-open");
+      btn_mobile.classList.toggle("btn_is-open");
+    });
+    btn_menu_main.addEventListener("click", function () {
       menu_mobile.classList.toggle("menu_is-open");
       btn_mobile.classList.toggle("btn_is-open");
     });
