add testing index

--- a/mobile/keyboard/testing.html
+++ b/mobile/keyboard/testing.html
@@ -57,9 +57,9 @@
         <div id="screenshot_2" class="screenshot"></div>
       </div>
       <br>
-      <a href="https://vk.me/ele_team" class="download_link_crutch"><button class="download_btn gradient_btn">
+      <a href="" class="download_link_crutch"><button class="download_btn gradient_btn">
         <div class="sub_btn"></div>
-        <div class="text_btn">Подать заявку</div>
+        <div class="text_btn">Скоро</div>
       </button></a>
       <p id="center_text" class="description">
         Thank you very much!
