--- a/mobile/keyboard/testing.html
+++ b/mobile/keyboard/testing.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li>
-            <a href="#main"><button class="gradient_btn" id="btn_menu_main">
+            <a href="../#main"><button class="gradient_btn" id="btn_menu_main">
                 <div class="sub_btn"></div>
                 <div class="text_btn">Главная</div>
               </button></a>
