--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li>
-            <a href="#main"><button class="gradient_btn">
+            <a href="#main"><button id="btn_mobile_main" class="gradient_btn">
                 <div class="sub_btn"></div>
                 <div class="text_btn">Главная</div>
               </button></a>
@@ -28,7 +28,7 @@
         </ul>
         <ul>
           <li>
-            <a href="#about"><button class="gradient_btn">
+            <a href="#about"><button id="btn_mobile_about" class="gradient_btn">
                 <div class="sub_btn"></div>
                 <div class="text_btn">О нас</div>
               </button></a>
@@ -36,7 +36,7 @@
         </ul>
         <ul>
           <li>
-            <a href="#projects"><button class="gradient_btn">
+            <a href="#projects"><button id="btn_mobile_projects" class="gradient_btn">
                 <div class="sub_btn"></div>
                 <div class="text_btn">Проекты</div>
               </button></a>
@@ -44,13 +44,31 @@
         </ul>
         <ul>
           <li>
-            <a href="#contacts"><button class="gradient_btn">
+            <a href="#contacts"><button id="btn_mobile_contacts" class="gradient_btn">
                 <div class="sub_btn"></div>
                 <div class="text_btn">Контакты</div>
               </button></a>
           </li>
         </ul>
     </div>
+    <script>
+      btn_mobile_main.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
+      btn_mobile_about.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
+      btn_mobile_projects.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
+      btn_mobile_contacts.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
+    </script>
     <div id="menu">
       <nav>
         <ul>
@@ -165,6 +183,34 @@
       menu_mobile.classList.toggle("menu_is-open");
       btn_mobile.classList.toggle("btn_is-open");
     });
+  </script>
+  <!-- Preloader -->
+  <style type="text/css">
+    #hellopreloader>p {
+      display: none;
+    }
+    #hellopreloader_preload {
+      display: block;
+      position: fixed;
+      z-index: 99999;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      min-width: 100px;
+      background: #F64747 url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;
+      background-size: 300px;
+    }
+  </style>
+  <div id="hellopreloader">
+    <div id="hellopreloader_preload"></div>
+  </div>
+  <script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload"); function fadeOutnojquery(el) {
+      el.style.opacity = 1; var interhellopreloader = setInterval(function () {
+        el.style.opacity = el.style.opacity - 0.05;
+        if (el.style.opacity <= 0.05) { clearInterval(interhellopreloader); hellopreloader.style.display = "none"; }
+      }, 16);
+    } window.onload = function () { setTimeout(function () { fadeOutnojquery(hellopreloader); }, 1500); }; 
   </script>
 </body>
 
