add mobile download btn

--- a/keyboard/index.html
+++ b/keyboard/index.html
@@ -96,9 +96,9 @@
         <div id="screenshot_2" class="screenshot"></div>
       </div>
       <br class="mobile">
-      <a href="" class="download_link_crutch"><button class="download_btn_mobile gradient_btn">
+      <a href="https://github.com/ele-group/keyboard/raw/master/output_keyboard.apk" class="download_link_crutch"><button class="download_btn_mobile gradient_btn">
         <div class="sub_btn"></div>
-        <div class="text_btn">Скоро</div>
+        <div class="text_btn">Скачать</div>
       </button></a>
       <br class="mobile">
       <p id="center_text" class="description">
