--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <p class="description">
         <b>Нажми</b> на иконку приложения, чтобы "скачать"
       </p>
-      <p class="note">*Необходимо наличие Ele на ПК. <br> Пока что только для Windows.</p>
+      <p class="note">*Необходимо наличие Ele на ПК. <br> Windows, Android</p>
     </section>
     <section id="contacts">
       <h2 id="tagline">Да прибудет с Вами связь!</h2>
@@ -210,7 +210,7 @@
         el.style.opacity = el.style.opacity - 0.05;
         if (el.style.opacity <= 0.05) { clearInterval(interhellopreloader); hellopreloader.style.display = "none"; }
       }, 16);
-    } window.onload = function () { setTimeout(function () { fadeOutnojquery(hellopreloader); }, 1500); }; 
+    } window.onload = function () { setTimeout(function () { fadeOutnojquery(hellopreloader); }, 250); }; 
   </script>
 </body>
 
