--- a/server/news.html
+++ b/server/news.html
@@ -7,19 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script
-      type="text/javascript"
-      src="https://vk.com/js/api/openapi.js?166"
-    ></script>
-
-    <!-- VK Widget -->
-    <div id="vk_groups"></div>
-    <script type="text/javascript">
-      VK.Widgets.Group(
-        "vk_groups",
-        { mode: 4, width: "840", height: "584" },
-        139365260
-      );
-    </script>
+    <h1>Тест</h1>
+    <h3>Куку!</h3>
   </body>
 </html>
