--- a/server/news.html
+++ b/server/news.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      .photo {
+        margin: 50px;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        background: 50% / cover no-repeat;
+      }
+      .photo > p {
+        width: 600px;
+        padding-left: 150px;
+        padding-top: 50px;
+        font-size: 2rem;
+        font-family: Helvetica, Arial;
+      }
+      #photo_1 {
+        background-image: url("https://avatars.mds.yandex.net/get-pdb/1732360/8bb686d8-803d-42e6-9d45-b2ffe9bb112e/s1200?webp=false");
+      }
+      #photo_2 {
+        background-image: url("https://avatars.mds.yandex.net/get-zen_doc/198359/pub_5bfc1df1c18e8b2092ea217a_5bfc1f12414f1b00a938d85b/scale_1200");
+      }
+      #photo_3 {
+        background-image: url("https://www.nastol.com.ua/pic/201701/2560x1600/nastol.com.ua-201210.jpg");
+      }
+    </style>
   </head>
   <body>
-    <h1>Тест</h1>
-    <h3>Куку!</h3>
+    <div id="photo_1" class="photo"><p>Добавили вкладку с новостями</p></div>
+    <div id="photo_2" class="photo"><p>Исправили ошибку с драконом</p></div>
+    <div id="photo_3" class="photo"><p>Исправили ошибку с запуском</p></div>
   </body>
 </html>
