--- a/server/news.html
+++ b/server/news.html
@@ -40,19 +40,19 @@
         color: rgb(200, 200, 200);
       }
       #keyboard {
-        background-image: url("https://github.com/ele-group/ele-group/blob/master/img/keyboard.webp?raw=true");
+        background-image: url("../img/keyboard.webp");
       }
       #cube {
-        background-image: url("https://github.com/ele-group/ele-group/blob/master/img/cube.webp?raw=true");
+        background-image: url("../img/cube.webp");
       }
       #smartbook {
-        background-image: url("https://github.com/ele-group/ele-group/blob/master/img/smartbook.webp?raw=true");
+        background-image: url("../img/smartbook.webp");
       }
       #princess {
-        background-image: url("https://github.com/ele-group/ele-group/blob/master/img/savetheprincess.webp?raw=true");
+        background-image: url("../img/savetheprincess.webp");
       }
       #monuments {
-        background-image: url("https://github.com/ele-group/ele-group/blob/master/img/monuments.webp?raw=true");
+        background-image: url("../img/monuments.webp");
       }
       #ele {
         background-image: url("https://github.com/ele-group/application/blob/master/img/rounded-64px.png?raw=true");
