--- a/server/news.html
+++ b/server/news.html
@@ -40,19 +40,19 @@
         color: rgb(200, 200, 200);
       }
       #keyboard {
-        background-image: url("../img/keyboard.webp");
+        background-image: url("https://img.icons8.com/color/100/000000/keyboard.png");
       }
       #cube {
-        background-image: url("../img/cube.webp");
+        background-image: url("https://img.icons8.com/color/100/000000/front-view.png");
       }
       #smartbook {
-        background-image: url("../img/smartbook.webp");
+        background-image: url("https://img.icons8.com/color/100/000000/saving-book.png");
       }
       #princess {
-        background-image: url("../img/savetheprincess.webp");
+        background-image: url("https://img.icons8.com/color/100/000000/lumpy-space-princess.png");
       }
       #monuments {
-        background-image: url("../img/monuments.webp");
+        background-image: url("https://img.icons8.com/color/48/000000/year-of-dragon.png");
       }
       #ele {
         background-image: url("https://github.com/ele-group/application/blob/master/img/rounded-64px.png?raw=true");
