--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       width: 100%;
       height: 100%;
       min-width: 100px;
-      background: #F64747 url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;
+      background: rgb(0, 0, 0) url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;
       background-size: 300px;
     }
   </style>
