--- a/public/cube/index.html
+++ b/public/cube/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="../css/style.css" type="text/css" rel="stylesheet" />
   <link href="../css/project.css" type="text/css" rel="stylesheet" />
-  <link href="../css/savetheprincess.css" type="text/css" rel="stylesheet" />
+  <link href="../css/cube.css" type="text/css" rel="stylesheet" />
   <link href="../css/animate.css" type="text/css" rel="stylesheet" />
   <link rel="icon" href="../favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
@@ -52,6 +52,14 @@
               </button></a>
           </li>
         </ul>
+        <ul>
+          <li>
+            <a href=".././profile"><button id="btn_mobile_profile" class="gradient_btn">
+                <div class="sub_btn"></div>
+                <div class="text_btn">Профиль</div>
+              </button></a>
+          </li>
+        </ul>
     </div>
     <script>
       btn_mobile_main.addEventListener("click", function () {
@@ -70,6 +78,10 @@
         menu_mobile.classList.toggle("menu_is-open");
         btn_mobile.classList.toggle("btn_is-open");
       });
+      btn_mobile_profile.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
     </script>
     <div id="menu">
       <nav>
@@ -80,6 +92,7 @@
           <li><a href="../#about">О нас</a></li>
           <li><a href="../#projects">Проекты</a></li>
           <li><a href="../#contacts">Контакты</a></li>
+          <li><a href=".././profile">Профиль</a></li>
           <li><a href="https://github.com/ele-group/application/raw/master/Ele.exe">Скачать</a></li>
         </ul>
       </nav>
@@ -87,39 +100,37 @@
   </header>
   <main>
     <section id="project">
-      <h1>Save the Princess</h1>
+      <h1>Cube Game</h1>
       <p class="description">
-        «Save the Princess» предоставляет возможность совершенствовать интеллектуальные навыки, развить логическое
-        мышление, быстроту реакции, обучиться программированию в игровой форме и развлечься. Игра выполнена в жанре Beat
-        ’em up, с элементами Action-adventure и платформера, что добавляет в игру разнообразие. Основной чертой данного
-        жанра является схватка главного героя против большого количества врагов. Также он сочетает в себе элементы
-        квеста и экшена.
+        Вам придётся бороться за выживание в кубическом мире!
       </p>
       <div id="carousel">
         <div id="screenshot_1" class="screenshot"></div>
         <div id="screenshot_2" class="screenshot"></div>
       </div>
+      <a href="https://github.com/ele-group/cube/raw/master/Cube%20Game.exe"><button class="gradient_btn download_btn">
+        <div class="sub_btn"></div>
+        <div class="text_btn">Скачать</div>
+      </button></a>
       <p id="center_text" class="description">
         Thank you very much!
       </p>
-      <div class="supported">
-        <div id="supported_unit_1" class="supported_unit"></div>
-        <div id="supported_unit_2" class="supported_unit"></div>
-        <div id="supported_unit_3" class="supported_unit"></div>
-        <div id="supported_unit_4" class="supported_unit"></div>
-        <div id="supported_unit_5" class="supported_unit"></div>
-        <div id="supported_unit_6" class="supported_unit"></div>
-        <div id="supported_unit_7" class="supported_unit"></div>
-        <div id="supported_unit_8" class="supported_unit"></div>
-        <div id="supported_unit_9" class="supported_unit"></div>
-      </div>
       <br>
-      <div class="supported_mobile">
-
+      <div class="supported_cube">
       </div>
+      <p class="description"><strong style="font-size: 3rem;">Отзывы</strong></p>
+      <input id="area_cube" class="comment">
+      <br>
+      <a href=""><button id="btn_cube" class="btn_comment gradient_btn download_btn" style="position: relative;">
+        <div class="sub_btn"></div>
+        <div id="btn_exit" class="text_btn">Опубликовать</div>
+      </button></a>
+      <br>
+      <div class="reviews"><div class="author"><div class="photo_author"></div><p id="cube_name_1" class="name_author">Lorem</p></div><p id="cube_content_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nihil libero ab eveniet, error doloribus quam est repellat dicta consequuntur, laborum dolore cum mollitia facilis officia tempore ut sunt numquam.</p></div>
+      <div class="reviews only"><div class="author"><div class="photo_author"></div><p id="cube_name_2" class="name_author">Lorem</p></div><p id="cube_content_2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nihil libero ab eveniet, error doloribus quam est repellat dicta consequuntur, laborum dolore cum mollitia facilis officia tempore ut sunt numquam.</p></div>
+      <div class="reviews only"><div class="author"><div class="photo_author"></div><p id="cube_name_3" class="name_author">Lorem</p></div><p id="cube_content_3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nihil libero ab eveniet, error doloribus quam est repellat dicta consequuntur, laborum dolore cum mollitia facilis officia tempore ut sunt numquam.</p></div>
       <br>
     </section>
-
   </main>
   <footer>
     <h2>Вова Вартанян. <br> Все права защищены. ©</h2>
@@ -128,6 +139,8 @@
       <div class="like"></div>
     </label>
   </footer>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="../js/reviews.js"></script>
   <script type="text/javascript" src="https://vk.com/js/api/openapi.js?160"></script>
     <!-- VK Widget -->
     <div id="vk_community_messages"></div>
