--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="css/style.css" type="text/css" rel="stylesheet" />
   <link href="css/animate.css" type="text/css" rel="stylesheet" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <title>Ele Official Site</title>
 </head>
 
@@ -50,6 +50,14 @@
               </button></a>
           </li>
         </ul>
+        <ul>
+          <li>
+            <a href="./profile"><button id="btn_mobile_profile" class="gradient_btn">
+                <div class="sub_btn"></div>
+                <div class="text_btn">Профиль</div>
+              </button></a>
+          </li>
+        </ul>
     </div>
     <script>
       btn_mobile_main.addEventListener("click", function () {
@@ -68,6 +76,10 @@
         menu_mobile.classList.toggle("menu_is-open");
         btn_mobile.classList.toggle("btn_is-open");
       });
+      btn_mobile_profile.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
     </script>
     <div id="menu">
       <nav>
@@ -78,6 +90,7 @@
           <li><a href="#about">О нас</a></li>
           <li><a href="#projects">Проекты</a></li>
           <li><a href="#contacts">Контакты</a></li>
+          <li><a href="./profile">Профиль</a></li>
           <li><a href="https://github.com/ele-group/application/raw/master/Ele.exe">Скачать</a></li>
         </ul>
       </nav>
@@ -85,9 +98,9 @@
   </header>
   <main>
     <section id="main">
-      <video id="overlay" src="background.mp4" poster="/img/poster.webp" autoplay loop muted></video>
+      <video id="overlay" src="background.mp4" poster="./img/poster.webp" autoplay loop muted></video>
       <div id="main_img" class="visible"></div>
-      <h1 class="visible">Ele</h1>
+      <h1 id="title" class="visible">Ele</h1>
     </section>
     <section id="about">
       <h2 id="tagline">Вместе мы сделаем этот мир лучше*</h2>
@@ -202,6 +215,7 @@
       background-size: 300px;
     }
   </style>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <div id="hellopreloader">
     <div id="hellopreloader_preload"></div>
   </div>
@@ -213,5 +227,4 @@
     } window.onload = function () { setTimeout(function () { fadeOutnojquery(hellopreloader); }, 250); }; 
   </script>
 </body>
-
 </html>
