--- a/public/keyboard/index.html
+++ b/public/keyboard/index.html
@@ -52,6 +52,14 @@
               </button></a>
           </li>
         </ul>
+        <ul>
+          <li>
+            <a href=".././profile"><button id="btn_mobile_profile" class="gradient_btn">
+                <div class="sub_btn"></div>
+                <div class="text_btn">Профиль</div>
+              </button></a>
+          </li>
+        </ul>
     </div>
     <script>
       btn_mobile_main.addEventListener("click", function () {
@@ -70,6 +78,10 @@
         menu_mobile.classList.toggle("menu_is-open");
         btn_mobile.classList.toggle("btn_is-open");
       });
+      btn_mobile_profile.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
     </script>
     <div id="menu">
       <nav>
@@ -80,6 +92,7 @@
           <li><a href="../#about">О нас</a></li>
           <li><a href="../#projects">Проекты</a></li>
           <li><a href="../#contacts">Контакты</a></li>
+          <li><a href=".././profile">Профиль</a></li>
           <li><a href="https://github.com/ele-group/application/raw/master/Ele.exe">Скачать</a></li>
         </ul>
       </nav>
@@ -117,11 +130,20 @@
       </div>
       <br>
       <div class="supported_mobile">
-
       </div>
+      <p class="description"><strong style="font-size: 3rem;">Отзывы</strong></p>
+      <input id="area_keyboard" class="comment">
+      <br>
+      <a href=""><button id="btn_keyboard" class="btn_comment gradient_btn download_btn" style="position: relative;">
+        <div class="sub_btn"></div>
+        <div id="btn_exit" class="text_btn">Опубликовать</div>
+      </button></a>
+      <br>
+      <div class="reviews"><div class="author"><div class="photo_author"></div><p id="keyboard_name_1" class="name_author">Lorem</p></div><p id="keyboard_content_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nihil libero ab eveniet, error doloribus quam est repellat dicta consequuntur, laborum dolore cum mollitia facilis officia tempore ut sunt numquam.</p></div>
+      <div class="reviews only"><div class="author"><div class="photo_author"></div><p id="keyboard_name_2" class="name_author">Lorem</p></div><p id="keyboard_content_2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nihil libero ab eveniet, error doloribus quam est repellat dicta consequuntur, laborum dolore cum mollitia facilis officia tempore ut sunt numquam.</p></div>
+      <div class="reviews only"><div class="author"><div class="photo_author"></div><p id="keyboard_name_3" class="name_author">Lorem</p></div><p id="keyboard_content_3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nihil libero ab eveniet, error doloribus quam est repellat dicta consequuntur, laborum dolore cum mollitia facilis officia tempore ut sunt numquam.</p></div>
       <br>
     </section>
-
   </main>
   <footer>
     <h2>Вова Вартанян. <br> Все права защищены. ©</h2>
@@ -130,6 +152,8 @@
       <div class="like"></div>
     </label>
   </footer>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="../js/reviews.js"></script>
   <script type="text/javascript" src="https://vk.com/js/api/openapi.js?160"></script>
     <!-- VK Widget -->
     <div id="vk_community_messages"></div>
