--- a/public/profile/sign_in.html
+++ b/public/profile/sign_in.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="../css/style.css" type="text/css" rel="stylesheet" />
   <link href="../css/project.css" type="text/css" rel="stylesheet" />
-  <link href="../css/monuments.css" type="text/css" rel="stylesheet" />
+  <link href="../css/keyboard.css" type="text/css" rel="stylesheet" />
   <link href="../css/animate.css" type="text/css" rel="stylesheet" />
   <link rel="icon" href="../favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
@@ -52,6 +52,14 @@
               </button></a>
           </li>
         </ul>
+        <ul>
+          <li>
+            <a href="./index.html"><button id="btn_mobile_profile" class="gradient_btn">
+                <div class="sub_btn"></div>
+                <div class="text_btn">Профиль</div>
+              </button></a>
+          </li>
+        </ul>
     </div>
     <script>
       btn_mobile_main.addEventListener("click", function () {
@@ -70,6 +78,10 @@
         menu_mobile.classList.toggle("menu_is-open");
         btn_mobile.classList.toggle("btn_is-open");
       });
+      btn_mobile_profile.addEventListener("click", function () {
+        menu_mobile.classList.toggle("menu_is-open");
+        btn_mobile.classList.toggle("btn_is-open");
+      });
     </script>
     <div id="menu">
       <nav>
@@ -80,42 +92,31 @@
           <li><a href="../#about">О нас</a></li>
           <li><a href="../#projects">Проекты</a></li>
           <li><a href="../#contacts">Контакты</a></li>
+          <li><a href="./index.html">Профиль</a></li>
           <li><a href="https://github.com/ele-group/application/raw/master/Ele.exe">Скачать</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main>
-    <section id="project">
-      <h1>Памятники природы Александровского района</h1>
-      <p class="description">
-        Мой проект «Памятники природы Александровского района» обучит Вас программированию в игровой форме, расскажет о достопримечательностях Александровского района, а также совершенствует навык управления мышкой и использования клавиатуры. Путешественник нашёл карту Александровского района и отправился туда для исследования местных памятников природы. В каждом уровне у персонажа ограниченный запас пищи.
-      </p>
-      <div id="carousel">
-        <div id="screenshot_1" class="screenshot"></div>
-        <div id="screenshot_2" class="screenshot"></div>
-      </div>
-      <p id="center_text" class="description">
-        Thank you very much!
-      </p>
-      <div class="supported">
-        <div id="supported_unit_1" class="supported_unit"></div>
-        <div id="supported_unit_2" class="supported_unit"></div>
-        <div id="supported_unit_3" class="supported_unit"></div>
-        <div id="supported_unit_4" class="supported_unit"></div>
-        <div id="supported_unit_5" class="supported_unit"></div>
-        <div id="supported_unit_6" class="supported_unit"></div>
-        <div id="supported_unit_7" class="supported_unit"></div>
-        <div id="supported_unit_8" class="supported_unit"></div>
-        <div id="supported_unit_9" class="supported_unit"></div>
-      </div>
-      <br>
-      <div class="supported_mobile">
-      </div>
-      <br>
-    </section>
-
+    <div class="grid">
+      <section id="sign_in">
+        <h1>Авторизация</h1>
+        <p class="description">
+          Для продолжения, пожалуйста, войдите или  <a href="./registration.html">зарегистрируйтесь</a>.
+        </p>
+        <br>
+        <input type="text" name="login" id="login_input" placeholder="Логин"> <br>
+        <input type="password" name="password" id="password_input" placeholder="Пароль"> <br>
+        <a href=""><button id="btn_sign_in" class="gradient_btn download_btn">
+          <div class="sub_btn"></div>
+          <div class="text_btn">Войти</div>
+        </button></a>
+        <div class="website"></div>
+      </section>
+    </div>
   </main>
+  <div class="div"></div>
   <footer>
     <h2>Вова Вартанян. <br> Все права защищены. ©</h2>
     <label><input class="hide" type="checkbox">
@@ -123,6 +124,8 @@
       <div class="like"></div>
     </label>
   </footer>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="../js/account.js"></script>
   <script type="text/javascript" src="https://vk.com/js/api/openapi.js?160"></script>
     <!-- VK Widget -->
     <div id="vk_community_messages"></div>
